# djangodemo

./: pyproject.toml
djangodemo/djangodemo/: settings.py  urls.py
