[tool.poetry]
name = "djangodemo"
version = "0.1.0"
description = ""
authors = ["amsraimar <amsraimar@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
django = "^5.0.1"
gunicorn = "^21.2.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
